# tart

./: .coverage  .gitignore  AGENTS.md  COMPOSING.md  README.md  STRUDEL-DNB-GUIDE.md  STRUDEL-LIBRARY.md  STRUDEL-README.md  coverage.xml  pyproject.toml  strudel_first_effects.html  strudel_first_notes.html  strudel_first_sounds.html  strudel_getting_started.html  strudel_learn_effects.html  strudel_learn_samples.html  strudel_learn_synths.html  strudel_pattern_effects.html  strudel_random_modifiers.html  strudel_time_modifiers.html
.github/workflows/: ci.yml
assets/: strudel_linter.html  strudel_renderer.html
projects/dnb-1/: README.md
src/strudel_orchestrator/: __init__.py  cli.py  linter.py  logger.py  orchestrator.py  renderer.py  schema.py  splicer.py
tests/: test_orchestrator.py  test_schema.py
tracks/: aurora-currents.strudel  auroral-haze.strudel  dnb-1.strudel  example.strudel  horizon-velocity.strudel  neon-impulse.strudel  test-saw.strudel
